# libpomp

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  gen_deb.sh
.github/workflows/: cmake-single-platform.yml
cmake/: pompConfig.cmake.in
deb/DEBIAN/: control
src/: pomp_watchdog.c
